# flask-simple-fullstack-template

./: .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  vercel.json
app/: app.py
app/static/: styles.css
app/templates/: base.html  index.html
