[tool.poetry]
name = "flask-simple-fullstack-template"
version = "0.1.0"
description = "A simple Flask fullstack template."
authors = ["ArielMAJ <ariel.maj@hotmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^3.0.1"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
